--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.66.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
