--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.66.9",
     "@testing-library/dom": "^10.4.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "firebase": "^11.3.1",
     "react": "^19.0.0",
