--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
-name: CI - Build and Test
-
+name: CI  - Build and Test
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
     branches:
@@ -29,5 +31,15 @@ jobs:
 
       - name: Run unit tests
         run: npm test
-
+ 
+        deploy:
+  
+      - name: Install Vercel CLI        
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information        
+        run: vercel pull --yes --environment=preview --token=${{ secrets.BRAND_NEW }}
+      - name: Build Project Artifacts        
+        run: vercel build --token=${{ secrets.BRAND_NEW }}
+      - name: Deploy Project Artifacts to Vercel        
+        run: vercel deploy --prebuilt --token=${{ secrets.BRAND_NEW}}
   
